# coursework_2

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api_vac.py  json_vac.py  main.py  vacancy.py
tests/: test_api.py  test_json.py  test_utils.py  test_vacancy.py
