[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["stanislav <stasfed16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
